fix: remove done todos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <section class="list-wrapper box-style">
-        <!-- <aside class="badge">TODO LIST</aside> -->
+        <aside class="badge">TODO LIST</aside>
         <ul class="todo-list">
 
         </ul>
