refactor to form element

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <h1 class="title">TODO</h1>
     <div class="input-wrapper">
-        <input class="todo-input box-style" type="text" placeholder="Todo">
-        <button class="add-btn btn box-style">+</button>
+        <form id="form-addtodos" action="">
+            <input class="todo-input box-style" type="text" placeholder="Todo">
+            <button class="add-btn btn box-style" type="submit">Add</button>
+        </form>
         <button class="remove-btn btn box-style">Remove Done</button>
     </div>
     <div class="filter box-style">
